declare_args() {
# -Os/-O0
    debug = false
    # 只有 debug=false 的情况才生效
    lto = true

    # 是否交叉编译 Android 动态库
    build_android = false
    # NDK 路径
    ndk_path = "~/Library/Android/sdk/ndk/21.4.7075529"

    # 交叉编译 iOS Android 生效
    cross_compile_target = "x86_64"

    # 暂时只对 clang 工具链有效
    code_coverage = false
    asan = false
    ubsan = false

    # iOS 交叉编译，否则编译 macOS 版本
    build_ios = false
    # 和 -apple-ios9.0 拼接，作为 -target 参数

    # QuickJS 专属
    big_number = false
}

if (build_android) {
    set_default_toolchain("//toolchain:android")
} else {
    set_default_toolchain("//toolchain:clang")
}